class capabilities:
    def __init__(self, read: bool, write: bool, delete: bool):
        self.read = read
        self.write = write
        self.delete = delete